@@ -12,6 +12,11 @@ Version 1.11.1+svn:
  * Language and i18n:
    * Updated translations: Italian, Portuguese.
 
+ * User interface:
+   * Allow copying the selection in the old (default) lobby using
+     Ctrl+C/Command+C, as well as manipulating the selection with Shift+<Arrow
+     keys.
+
  * Miscellaneous and bug fixes:
    * The undo stack is preserved across a save-reload.
    * Fixed the present in-game command line autocompletion feature so it
