@@ -8,6 +8,10 @@ Version 1.11.1+svn:
    * Fix layering error with bridges
  * Language and i18n:
    * Updated translations: Italian, Portuguese
+ * User interface:
+   * Allow copying the selection in the old (default) lobby using
+     Ctrl+C/Command+C, as well as manipulating the selection with Shift+<Arrow
+     keys>
  * WML engine:
    * [unit_overlay] and [remove_unit_overlay] now return a more meaningful
      error message if the image= key is missing
